Wed Jan 23 00:51:42 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/selectpostlist.cc,matcher/selectpostlist.h: Check document
	  matches weight threshold before checking positional information,
	  which speeds up slow phrase searches (tweaked version of
	  positional-query-weight-check-first.patch from #394).

Thu Jan 17 06:48:41 GMT 2013  Olly Betts <olly@survex.com>

	* tests/api_stem.cc: Extend stem2 to ensure description of the stemmer
	  isn't the same as the description of Stem("none").  Fix description
	  of testcase stemlangs2.

Thu Jan 17 02:32:31 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Update link to new home of autotools tutorial.

Wed Jan 16 02:40:20 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am: Rename CHK_SOURCES to check_sources - variables
	  ending _SOURCES usually have a special meaning in automake, so it's
	  confusing to have one which doesn't.

Wed Jan 16 01:55:50 GMT 2013  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Don't cache documents retrieved by
	  MSet::get_document() unless they were requested with fetch().  This
	  avoids using a lot of memory when many MSet entries are retrieved.
	  (Fixes #604)

Wed Jan 09 11:49:58 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.

Fri Jan 04 23:14:33 GMT 2013  Olly Betts <olly@survex.com>

	* net/progclient.cc: Fix typo so we actually use SOCK_CLOEXEC.

Fri Jan 04 23:14:01 GMT 2013  Olly Betts <olly@survex.com>

	* common/safesyssocket.h: We need the same workaround for socket() too.

Fri Jan 04 04:41:17 GMT 2013  Olly Betts <olly@survex.com>

	* common/safesyssocket.h: On Linux at least, sometimes SOCK_CLOEXEC is
	  defined but the kernel doesn't handle it in socketpair(), so add a
	  wrapper which will retry without SOCK_CLOEXEC in this case.  Noticed
	  on Ubuntu precise.

Sat Dec 29 17:53:30 GMT 2012  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Fix seriously outdated statement that Xapian