@@ -51,3 +51,4 @@
 /turkish.cc
 /turkish.h
 /generate-allsnowballheaders
+/sbl-dispatch.h
