@@ -1,3 +1,4 @@
+// Alias: hy
 // From: http://snowball.tartarus.org/algorithms/armenian/stemmer.html
 // Author: Astghik Mkrtchyan
 // Licence: 2-clause BSD, as per http://snowball.tartarus.org/license.php
