@@ -1,3 +1,4 @@
+// Alias: eu
 // From: http://snowball.tartarus.org/algorithms/basque/stemmer.html
 // Author: Mikel Otxandorena
 // Licence: 2-clause BSD, as per http://snowball.tartarus.org/license.php
