@@ -1,3 +1,4 @@
+// Alias: de
 
 /*
     Extra rule for -nisse ending added 11 Dec 2009
