@@ -1,3 +1,5 @@
+// Alias: hu
+
 /*
 Hungarian Stemmer
 Removes noun inflections
