@@ -1,3 +1,5 @@
+// Alias:
+
 integers ( p1 p2 )
 booleans ( Y_found )
 
