@@ -1,3 +1,5 @@
+// Alias: tr
+
 /* Stemmer for Turkish
 	* author: Evren (Kapusuz) Çilden
 	* email: evren.kapusuz at gmail.com
